<resources>

    <!-- LoginActivity -->
    <string name="app_name">Canteen Checker Admin</string>
    <string name="btn_login">Login</string>
    <string name="lbl_password">Password</string>
    <string name="lbl_username">Username</string>
    <string name="login">Login</string>
    <string name="message_login_failed">Login failed, pleaase check username and password</string>

    <!-- OverviewActivity -->
    <string name="title_activity_overview">OverviewActivity</string>
    <string name="text_dish">Dish of the day</string>
    <string name="text_waiting_time">Waiting time</string>
    <string name="text_minutes">minutes</string>
    <string name="text_location">Location</string>
    <string name="message_canteen_not_found">Canteen not found</string>
    <string name="message_no_call_permission">No permission to make phone call</string>
    <string name="message_call_not_possible">Call not possible</string>
    <string name="message_show_website_not_possible">Showing of website not possible</string>
    <string name="tag_map_fragment">com.google.android.gms.maps.SupportMapFragment</string>
    <string name="save">Save</string>
    <string name="logout">Logout</string>
    <string name="text_dishprice">Dish Price</string>
    <string name="text_website">Website</string>
    <string name="text_phonenumber">Phone Number</string>
    <string name="text_name">Name</string>

    <!-- ReviewsFragment -->
    <string name="text_ratings_and_reviews">Ratings and reviews</string>
    <string name="text_five">5</string>
    <string name="text_four">4</string>
    <string name="text_three">3</string>
    <string name="text_two">2</string>
    <string name="text_one">1</string>
    <string name="text_add_review">Add review</string>
    <string name="title_activity_review">ReviewActivity</string>
    <string name="back">Back</string>
    <string name="password">" Password"</string>
    <string name="username">" Username"</string>
    <string name="LoremIpsum">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.</string>
    <string name="enter_an_address">Enter an address</string>


</resources>