<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/viwProgressly"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <ProgressBar
            android:id="@+id/viwProgress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

        <TextView
            android:id="@+id/tvProgress"
            style="?android:attr/textAppearanceLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textAlignment="gravity" />

    </LinearLayout>

    <ScrollView
        android:id="@+id/viwContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        tools:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/colorPrimary"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_name"
                style="@style/TextAppearance.MaterialComponents.Overline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/distance_medium"
                android:layout_marginTop="@dimen/distance_small"
                android:text="@string/text_name" />

            <EditText
                android:id="@+id/edtName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/distance_medium"
                android:ems="10"
                android:inputType="text"
                android:textSize="24sp"
                tools:text="Name" />

            <TextView
                android:id="@+id/text_phonenumber"
                style="@style/TextAppearance.MaterialComponents.Overline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/distance_medium"
                android:layout_marginTop="@dimen/distance_large"
                android:text="@string/text_phonenumber" />

            <EditText
                android:id="@+id/edtPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/distance_medium"
                android:ems="10"
                android:inputType="phone"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/text_website"
                style="@style/TextAppearance.MaterialComponents.Overline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/distance_medium"
                android:layout_marginTop="@dimen/distance_large"
                android:text="@string/text_website" />

            <EditText
                android:id="@+id/edtWebsite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/distance_medium"
                android:ems="10"
                android:inputType="text"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/text_dish"
                style="@style/TextAppearance.MaterialComponents.Overline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/distance_medium"
                android:layout_marginTop="@dimen/distance_large"
                android:text="@string/text_dish" />

            <EditText
                android:id="@+id/edtDish"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/distance_medium"
                android:ems="10"
                android:inputType="text"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/text_dishprice"
                style="@style/TextAppearance.MaterialComponents.Overline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/distance_medium"
                android:layout_marginTop="@dimen/distance_large"
                android:text="@string/text_dishprice" />

            <EditText
                android:id="@+id/edtDishPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/distance_medium"
                android:ems="10"
                android:inputType="numberDecimal"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/text_waiting_time"
                style="@style/TextAppearance.MaterialComponents.Overline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/distance_medium"
                android:layout_marginTop="@dimen/distance_large"
                android:text="@string/text_waiting_time" />

            <EditText
                android:id="@+id/edtWaitingTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/distance_medium"
                android:ems="10"
                android:inputType="number"
                android:textSize="24sp" />

<!--            <EditText-->
<!--                android:id="@+id/edtAddress"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginHorizontal="@dimen/distance_medium"-->
<!--                android:layout_marginVertical="@dimen/distance_small"-->
<!--                android:editable="false"-->
<!--                android:ems="10"-->
<!--                android:inputType="text"-->
<!--                android:text="Address"-->
<!--                android:textSize="24sp" />-->
            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/fcvReview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/distance_medium"
                android:layout_marginTop="@dimen/distance_large"/>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>